# sdk-python

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
oxarchive/: __init__.py  client.py  exchanges.py  http.py  l4_reconstructor.py  orderbook_reconstructor.py  types.py  websocket.py
oxarchive/resources/: __init__.py  candles.py  data_quality.py  funding.py  instruments.py  l2_orderbook.py  l3_orderbook.py  l4_orderbook.py  liquidations.py  openinterest.py  orderbook.py  orders.py  outcomes.py  spot.py  trades.py
