[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oxarchive"
version = "1.4.0"
description = "Python SDK for the 0xArchive market data API for Hyperliquid and Lighter.xyz"
readme = "README.md"
license = "MIT"
authors = [
    { name = "0xarchive", email = "support@0xarchive.io" }
]
keywords = ["0xarchive", "market-data", "hyperliquid", "lighterxyz", "orderbook", "trades", "replay", "api", "sdk"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
websocket = [
    "websockets>=14.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]
all = [
    "websockets>=14.0",
]

[project.urls]
Homepage = "https://www.0xarchive.io/github-python"
Documentation = "https://www.0xarchive.io/docs/sdks"
Repository = "https://github.com/0xArchiveIO/sdk-python"
Issues = "https://github.com/0xArchiveIO/sdk-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["oxarchive"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.9"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
